rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__array_lower_scalar.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 7324
expression: "execute_query(\"\n                SELECT\n                    array_lower(ARRAY[1,2,3,4,5]) v1,\n                    array_lower(ARRAY[5,4,3,2,1]) v2,\n                    array_lower(ARRAY[5,4,3,2,1], 1) v3\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+----+----+----+
| v1 | v2 | v3 |
+----+----+----+
| 1  | 1  | 1  |
+----+----+----+
