rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__avg_null_type.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT AVG(x) FROM (SELECT NULL AS x) AS t\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----------+
| AVG(t.x) |
+----------+
| NULL     |
+----------+
