rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__current_setting.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT current_setting('max_index_keys'), current_setting('search_path')\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----------------------------------------+--------------------------------------+
| current_setting(Utf8("max_index_keys")) | current_setting(Utf8("search_path")) |
+-----------------------------------------+--------------------------------------+
| 32                                      | "$user", public                      |
+-----------------------------------------+--------------------------------------+
