rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__df_compare_int_with_null.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT\n                    typname AS name,\n                    oid,\n                    typarray AS array_oid,\n                    CAST(CAST(oid AS regtype) AS TEXT) AS regtype,\n                    typdelim AS delimiter\n                FROM\n                    pg_type AS t\n                WHERE\n                    t.oid = to_regtype('nonexistent')\n                ORDER BY\n                    t.oid\n                ;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+------+-----+-----------+---------+-----------+
| name | oid | array_oid | regtype | delimiter |
+------+-----+-----------+---------+-----------+
+------+-----+-----------+---------+-----------+
